--- a/log_output/Makefile
+++ b/log_output/Makefile
@@ -1,2 +1,5 @@
 build:
-	docker build -t log_output .
+	docker build -t log_output:$(shell date +%H%M%S) .
+
+add_to_k3s:
+	k3d image import log_output:latest 
