--- a/the_project/webserver/manifests/deployment.yaml
+++ b/the_project/webserver/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: webserver
-          image: webserver:latest
+          image: webserver:235211
           imagePullPolicy: IfNotPresent
           env:
             - name: PORT
