--- a/log_output/Dockerfile
+++ b/log_output/Dockerfile
@@ -2,11 +2,12 @@ FROM node:24-alpine3.21 AS build-env
 COPY . /app
 WORKDIR /app
 
-RUN npm ci --omit=dev
+RUN npm ci
+RUN npm run build
 
 
 
 FROM gcr.io/distroless/nodejs24-debian12
 COPY --from=build-env /app /app
 WORKDIR /app
-CMD ["src/index.js"]
+CMD ["dist/index.js"]
