--- a/log_output/manifests/deployment.yaml
+++ b/log_output/manifests/deployment.yaml
@@ -14,5 +14,5 @@ spec:
     spec:
       containers:
         - name: log-outputter
-          image: log_output
+          image: log_output:163347
           imagePullPolicy: IfNotPresent
