--- a/log_output/package.json
+++ b/log_output/package.json
@@ -1,15 +1,18 @@
 {
   "name": "log_output",
-  "version": "1.0.0",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
+  "type": "module",
   "scripts": {
-    "dev":"node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
-  "author": "Simon Blomsterlund",
-  "license": "MIT",
-  "description": ""
+  "dependencies": {
+    "@hono/node-server": "^1.19.4",
+    "hono": "^4.9.9"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1",
+    "typescript": "^5.8.3"
+  }
 }
