--- a/the_project/webserver/manifests/service.yaml
+++ b/the_project/webserver/manifests/service.yaml
@@ -1,14 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: webserver
+  name: webserver-svc
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: webserver # This is the app as declared in the deployment.
   ports:
-    - name: http
-      nodePort: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
+    - port: 3000
       protocol: TCP
-      port: 3001 # This is a port that is available to the cluster, in this case it can be ~ anything
-      targetPort: 3001 # This is the target port
+      targetPort: 3001
