--- a/log_reader/Makefile
+++ b/log_reader/Makefile
@@ -1,5 +1,5 @@
 build:
-	docker build -t log_output:$(shell date +%H%M%S) .
+	docker build -t log_reader:$(shell date +%H%M%S) .
 
 add_to_k3s:
-	k3d image import log_output:163347 
+	k3d image import log_reader:003204 
