--- a/infra-manifests/persistentvolume-project.yaml
+++ b/infra-manifests/persistentvolume-project.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: local-pv
+  name: project-pv
 spec:
-  storageClassName: my-local-pv # this is the name you are using later to claim this volume
+  storageClassName: my-project-pv # this is the name you are using later to claim this volume
   capacity:
     storage: 1Gi # Could be e.q. 500Gi. Small amount is to preserve space when testing locally
   volumeMode: Filesystem # This declares that it will be mounted into pods as a directory
   accessModes:
     - ReadWriteOnce
   local:
-    path: /tmp/kube
+    path: /tmp/kube2
   nodeAffinity: ## This is only required for local, it defines which nodes can access it
     required:
       nodeSelectorTerms:
