--- a/log_reader/manifests/persistentvolumeclaim.yaml
+++ b/log_reader/manifests/persistentvolumeclaim.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: log-storage-claim # name of the volume claim, this will be used in the deployment
+  namespace: exercises
 spec:
   storageClassName: my-local-pv # this is the name of the persistent volume we are claiming
   accessModes:
