--- a/the_project/webserver/manifests/persistentvolumeclaim.yaml
+++ b/the_project/webserver/manifests/persistentvolumeclaim.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: project-storage-claim # name of the volume claim, this will be used in the deployment
-  namespace: default
+  namespace: project
 spec:
   storageClassName: my-project-pv # this is the name of the persistent volume we are claiming
   accessModes:
