--- a/the_project/todo-backend/manifests/deployment.yaml
+++ b/the_project/todo-backend/manifests/deployment.yaml
@@ -15,5 +15,15 @@ spec:
     spec:
       containers:
         - name: todo-backend
-          image: todo_backend:230823
+          image: todo_backend:224127
           imagePullPolicy: IfNotPresent
+          env:
+            - name: PORT
+              value: "3000"
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
